--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
       "error",
       { "argsIgnorePattern": "^_" }
     ],
+    "@typescript-eslint/no-explicit-any": [
+      "warn"
+    ],
     "quotes": ["error", "double"],
     "comma-dangle": ["error", "always-multiline"]
   }
