--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,12 @@
     "eslint:recommended"
   ],
   "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "plugins": ["@typescript-eslint"],
   "rules": {
     "react/react-in-jsx-scope": "off", // Next.js handles React globally
@@ -17,8 +23,10 @@
     "@typescript-eslint/no-explicit-any": [
       "warn"
     ],
+    "@typescript-eslint/ban-ts-comment": 0,
     "no-unused-vars": "warn",
     "quotes": ["error", "double"],
     "comma-dangle": ["error", "always-multiline"]
-  }
+  },
+  "ignorePatterns": ["useApi.tsx"]
 }
