--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@chakra-ui/checkbox": "^2.3.2",
-    "@chakra-ui/react": "^3.2.1",
+    "@chakra-ui/react": "^2.10.4",
+    "@choc-ui/chakra-autocomplete": "^5.7.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "axios": "^1.7.8",
-    "framer-motion": "^11.12.0",
+    "framer-motion": "^7.10.3",
     "next": "15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
