--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-toastify": "^10.0.6",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "sass": "^1.81.0"
   },
   "devDependencies": {
     "@types/node": "^20",
