--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
     "framer-motion": "^7.10.3",
     "next": "15.0.3",
     "react": "^18.3.1",
