--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@choc-ui/chakra-autocomplete": "^5.7.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@types/react-virtualized": "^9.22.0",
     "axios": "^1.7.8",
     "date-fns": "^4.1.0",
     "framer-motion": "^7.10.3",
@@ -24,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-toastify": "^10.0.6",
+    "react-virtualized": "^9.22.5",
     "recoil": "^0.7.7",
     "sass": "^1.81.0"
   },
