--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "baseUrl": ".",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "src/types/global.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
